T1-245 Fix title font weight on Firefox

--- a/src/client/components/templates/homepage/front-page-hero/front-page-hero.scss
+++ b/src/client/components/templates/homepage/front-page-hero/front-page-hero.scss
@@ -98,13 +98,13 @@
   }
   @include grid-media($sba-grid-medium) {
     font-size: 6vw;
-    font-weight: 710;
+    font-weight: 900;
     line-height: 6vw;
     margin-bottom: 2vw;
   }
   @include grid-media($sba-grid-large) {
     font-size: 6vw;
-    font-weight: 710;
+    font-weight: 900;
     line-height: 6vw;
     margin-bottom: 2vw;
   }
